Chapters 5 & 6 title changes, Likert questions in-line, diminished reality edits, semicolons culled.

--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -1,4 +1,4 @@
-Amongst others, thanks go to;
+Amongst others, thanks go to:
 
 \begin{itemize}
 
@@ -10,7 +10,7 @@ Amongst others, thanks go to;
 	
 	\item Richard Fawcett for his input to the reconstructions used within this research.
 	
-	\item My fellow research students, particularly the denizens of the venerable `Taint' chat; Ruth Hoffmann, Luke Hutton and Jonathan Ward.
+	\item My fellow research students, particularly the denizens of the venerable `Taint' chat: Ruth Hoffmann, Luke Hutton and Jonathan Ward.
 	
 	\item All of the staff at the School of Computer Science who made things that much more pleasant, academically or otherwise.
 	
