--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -31,7 +31,7 @@ This is not an augmented reality system which superimposes virtual objects upon 
 
 \section{Parallel Reality}
 \label{intro-parallel-reality}
-The central theme of this thesis is the concept of `parallel reality', a new category of alternate reality defined thus;
+The central theme of this thesis is the concept of `parallel reality', a new category of alternate reality defined thus:
 
 \vspace{7mm}
 
@@ -69,7 +69,7 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 
 \section{Contributions}
 \label{intro-contributions}
-The contributions of this thesis can be summarized as follows;
+The contributions of this thesis can be summarized as follows:
 
 \begin{itemize}
 	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience complete real and virtual environments in tandem and represents an avenue for further mitigation of the vacancy problem.
