--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -74,7 +74,7 @@ An obvious question raised from studying this figure is at what point toward the
 
 If one were to take a viewport depicting a purely real environment and incrementally add more and more virtual objects, the environment's classification might intuitively seem to progress rightward along the continuum. Eventually, with the majority of the real environment obscured by virtual objects one might posit that the resultant environment should therefore have passed the centre point of the continuum and come to rest somewhere in its right half, gaining the classification of augmented virtuality. Likewise if one were to take a viewport depicting a purely virtual environment and incrementally introduce more sampled real objects to it, one might posit that it would eventually pass the centre point of the continuum and come to rest in the territory of augmented reality.
 
-Anthony Steed's extension to Milgram and Kishino's reality-virtuality continuum concept clarifies the fallacy in this thinking by introducing the concept of the `primary environment';
+Anthony Steed's extension to Milgram and Kishino's reality-virtuality continuum concept clarifies the fallacy in this thinking by introducing the concept of the `primary environment':
 
 \begin{quote}
 \textit{``While it is quite clear that the intention of plotting this axis was not to claim that it was actually a continuum between real and virtual, it is nevertheless clear that the main `environment' could be one of three things: a purely virtual environment, the local environment, or a remote real environment\footnote{Telepresence~\cite{Sheridan1992a}.}. One can think about what the background of the environment that the users see is...''}~\cite{Steed2014}
@@ -104,7 +104,7 @@ Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reali
   \label{Mann_venn_mod_3.png}
 \end{figure}
 
-Visualising the position of these primary environments, reality and virtual reality, using this same method requires more drastic alteration to the diagram, but is diagnostic in further revealing the relationships between the terms covered in Mann's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows that;
+Visualising the position of these primary environments, reality and virtual reality, using this same method requires more drastic alteration to the diagram, but is diagnostic in further revealing the relationships between the terms covered in Mann's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows that:
 \begin{itemize}
 	\item Mixed reality is the intersection of reality and virtual reality.
 	\item Mediated reality can be comprised from purely real or purely virtual content.
@@ -214,7 +214,7 @@ Augmented Reality (AR) & A mixed reality environment that features a real enviro
 
 %=========================================================================================================
 
-Diminished Reality & Where augmented reality is concerned with adding virtual objects to a view of the real world, diminished reality is concerned with the removal of objects from a view of the real world~\cite{Mann2002}. Examples include the removal of real world advertisements (such as billboards). \\
+Diminished Reality & Where augmented reality is concerned with adding virtual objects to a view of the real world, diminished reality is concerned with the removal of objects from a view of the real world~\cite{Mann2002}. Simple applications include the removal of real world advertisements, such as billboards. More involved applications might combine diminished reality with augmented reality to, for example, present a faithful representation of a historical scene upon a real world environment, by not just adding historical artefacts via augmented reality but also removing historically inaccurate later developments via diminished reality. \\
 
 \midrule
 
@@ -253,7 +253,7 @@ The principle features that distinguish cross reality from the other alternate r
 
 %This thesis presents systems that focus on the second aspect above and extends it by permitting both environments to be experienced at any time and position.
 
-As an alternate reality paradigm cross reality has its roots in work undertaken by the IBM Virtual Universe Community\footnote{\url{http://eightbar.co.uk/2006/04/22/lessons-from-second-life/}}\footnote{\url{http://eightbar.co.uk/2006/04/09/second-life-outside-in/}}\footnote{\url{http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/}}, described in personal correspondence by Ian Hughes.
+As an alternate reality paradigm cross reality has its roots in work undertaken by the IBM Virtual Universe Community\footnote{\url{http://eightbar.co.uk/2006/04/22/lessons-from-second-life/}}\footnote{\url{http://eightbar.co.uk/2006/04/09/second-life-outside-in/}}\footnote{\url{http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/}}, described in personal correspondence by Ian Hughes:
 
 \begin{quote}
 \textit{``The control mechanisms worked two ways generally. There was a physical lab that had devices that were controlled by a pub/sub mechanism \ldots\ Those devices subscribed to various messages. So initially web pages controlled them \ldots\ Equally the objects generated messages when they were physically switched on and off. As SL\SLfootnote{} had an RPC interface it was possible \ldots\ to subscribe to the same messages and send requests into SL to change states of objects \ldots\ So there were lights, blinds, proximity detectors and even the tilt sensors on the laptops that were instrumented with these messages.''}
@@ -282,7 +282,7 @@ A potential source of standardization for the implementation of cross reality sy
 
 \subsubsection{Alternate Reality Definitions from Cross Reality}
 
-Lifton's use of alternate reality terminology does not directly conclude that mixed reality is a broad term encompassing both augmented reality and augmented virtuality, but defines it as an environment
+Lifton's use of alternate reality terminology does not directly conclude that mixed reality is a broad term encompassing both augmented reality and augmented virtuality, but defines it as an environment:
 
 \begin{quote}
 	\textit{``\ldots\ which would be incomplete without both its real and virtual components. For example, the walls and windows of a mixed reality house might be real, but the view out the windows might be virtual, either generated by a projector or as a blue screen effect in a head-mounted display. Without both the real house and the virtual views out the windows, the illusion of a consistent reality is broken''}~\cite{Lifton2007a}
@@ -425,7 +425,7 @@ One might consider the `Second Earth' concept to be the ultimate realisation of 
 
 Although the use cases for parallel reality systems that feature completely unrelated real and virtual environments (including where the virtual environment is entirely fictitious) may seem limited in terms of possible benefits to understanding or knowledge gain when comparing and contrasting the environments, an educated approach to implementing transitions between these environments, that takes similar considerations as the platforms developed in this thesis, does conceivably have purpose. In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, both in the real world and in the `Metaverse' - analogous to a virtual world akin to Second Life, accessed via a HMD, comprised of entirely synthetic locations with no counterparts in the real world and which is used to accomplish the same tasks for which today we use the Web. Her response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
 
-There is no spatial equivalence in this scenario between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. Situations of publicly experienced spatially equivalent and non-equivalent alternate realities are also rife in Vernor Vinge's \textit{Rainbows End};
+There is no spatial equivalence in this scenario between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. Situations of publicly experienced spatially equivalent and non-equivalent alternate realities are also rife in Vernor Vinge's \textit{Rainbows End}:
 
 \begin{quote}
 	\textit{``Robert leaned back from the window and reached out to wider universes. Colored maps appeareed before his eyes. These were realities that were geographically far away, not overlaid upon San Diego at all \ldots\ Finally he got a window that promised `public local reality only.' ''}~\cite{Vinge2006}
@@ -507,7 +507,7 @@ Waterworth and Waterworth present the \textit{three dimensions of virtual experi
 	\end{center}	
 \end{figure}
 
-In the three dimensions of virtual experience model the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors;
+In the three dimensions of virtual experience model the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors:
 
 \begin{quote}
 	\textit{``Presence arises from active awareness of our embodiment in a present world around us. Presence is not consciousness, and we may be highly conscious while feeling absent, at those times when we are relatively unaware of our own embodiment.''}~\cite{Waterworth2014}
@@ -529,7 +529,7 @@ With the locus of attention axis representing the environment from which the sti
 	\end{center}	
 \end{figure}
 
-Studying the combined Milgram/Waterworth model shows more clearly that the balance between presence and absence can relate to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth in a subsequent publication;
+Studying the combined Milgram/Waterworth model shows more clearly that the balance between presence and absence can relate to any environment upon the locus of attention axis, as confirmed by Waterworth and Waterworth in a subsequent publication:
 
 \begin{quote}
 	\textit{``We may feel hardly present at all in the physical world (a state we call absence) if nothing is happening there that is of interest or that impacts on our well-being, and so it is with mediated presence.''}~\cite{Waterworth2014}
@@ -658,7 +658,7 @@ Sensus is expected to be largely task dependent, however when performing a task 
 \label{caseforpr}
 %ARCHEOGUIDE makes the point that AR is good because users are not isolated/completely immersed in a synthetic world - well Mirrorshades allows uers to more fully immerse themselves in a synthetic world, but without becoming isolated in it (eg without becoming ***vacant*** from the real world)
 
-A parallel reality system that presents the user with the choice between immersive visual stimuli from both its constituent environments allows that user to engage with both real and virtual content in a manner that is similar to, but has a number of advantages over, previous alternate reality systems, including augmented reality implementations and cross reality systems;
+A parallel reality system that presents the user with the choice between immersive visual stimuli from both its constituent environments allows that user to engage with both real and virtual content in a manner that is similar to, but has a number of advantages over, previous alternate reality systems, including augmented reality implementations and cross reality systems:
 
 \begin{itemize}
 	\item A parallel reality system is less critical of registration (the accurate positioning/alignment) between real and virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment~\cite{Azuma1997}.
@@ -667,7 +667,7 @@ A parallel reality system that presents the user with the choice between immersi
 	\item The vacancy problem is further addressed, but instead of doing so by linking real and virtual environments by sensor and actuator infrastructure, vacancy in both environments is alleviated by furnishing users with the ability to transition between perceiving visual stimuli from them both.
 \end{itemize}
 
-Parallel reality platforms are thus well suited to situations in which interaction with the visual stimuli of both real and virtual environments is required and where one or more of the following hold true;
+Parallel reality platforms are thus well suited to situations in which interaction with the visual stimuli of both real and virtual environments is required and where one or more of the following hold true:
 
 \begin{itemize}
 	\item In lieu of accurate registration between real and virtual, there is a strong focus on the virtual environment's atmosphere and immersion~\cite{deamicis:gamebased}.
