--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -18,9 +18,9 @@ This chapter presents the development of a preliminary parallel reality platform
 
 Alternate reality technologies have been used for over two decades~\cite{Roussou2002} to aid in the investigation, understanding and dissemination of information pertaining to our past in the fields of archaeology and cultural heritage. Whilst archaeology studies human activity through the recovery of remains, heritage is concerned also with intangible attributes of society; tradition, art, narratives and other cultural evidences~\cite{Roussou2002}. \textit{Virtual heritage} is the name given to the application of advanced imaging techniques, including alternate realities, to the synthesis, conservation, reproduction, representation, reprocessing and display of this cultural evidence~\cite{roussou:photorealism}.
 
-These techniques provide access to locations and artefacts scattered about the world which may reside in private collections inaccessible to scholars (much less to interested amateurs) and outwith of their original context of creation~\cite{griffin:recovering}. They allow recreations to be made of the numerous cultural heritage objects that are deteriorating or are at risk of being lost, whether due to natural causes such as weather and natural disasters or due to acts of man such as civil war~\cite{Ikeuchi2003}.
+These techniques provide access to locations and artefacts scattered about the world which may reside in private collections inaccessible to scholars (much less to the general public) and outwith of their original context of creation~\cite{griffin:recovering}. They allow recreations to be made of the numerous cultural heritage objects that are deteriorating or are at risk of being lost, whether due to natural causes such as weather and natural disasters or due to acts of man such as civil war~\cite{Ikeuchi2003}.
 
-Virtual heritage techniques offer substantial benefits to collaborative investigation of heritage sites, where multiple users are provided the ability to collaborate via a multitude of different visualization modalities including video see-through head-tracked HMDs, projected table surfaces, large screen displays and tracked hand-held displays, including the ability for experts physically located at a particular site to collaborate with those remote to it~\cite{benko:collaborative}. This combination of different techniques not only benefits experts, but has been used in the creation of contiguous platforms for building and managing exhibitions of 3D models of artefacts accessed in museums, galleries and via the Web~\cite{Wojciechowski2004}, focussed not only on the digitization and subsequent interaction with such content to aid in its preservation and protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians and interested amateurs)~\cite{walczak:applications}.
+Virtual heritage techniques offer substantial benefits to collaborative investigation of heritage sites, where multiple users are provided the ability to collaborate via a multitude of different visualization modalities including video see-through head-tracked HMDs, projected table surfaces, large screen displays and tracked hand-held displays, including the ability for experts physically located at a particular site to collaborate with those remote to it~\cite{benko:collaborative}. This combination of different techniques not only benefits experts, but has been used in the creation of contiguous platforms for building and managing exhibitions of 3D models of artefacts accessed in museums, galleries and via the Web~\cite{Wojciechowski2004}, focussed not only on the digitization and subsequent interaction with such content to aid in its preservation and protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians and the general public)~\cite{walczak:applications}.
 
 Even traditionally two-dimensional visual resources associated with cultural heritage can be integrated into such state-of-the-art systems, visualized via immersive CAVE (Cave Automatic Virtual Environment~\cite{Tzortzaki2002}) techniques as part of `information landscapes'~\cite{Ruffaldi2008}. Virtual heritage techniques such as these are of particular benefit to young people as cultural heritage sites often arouse little involvement in them, especially if the site's present day appearance bears few traces of its original stature and makes it difficult to appreciate its original splendour and importance~\cite{ardito:combining}.
 
@@ -37,7 +37,7 @@ Due to the diverse approaches that have been used in the application of visualiz
   \label{taxonomy_1.png}
 \end{figure}
 
-This model classifies visualization strategies according to four continua, represented by the three physical dimensions of the cube and the degree of shading of each point within the cube. The x axis represents the level of automatism, which refers to the span of the development cycle required to produce the visualization; the y axis represents the level of precision, referring not only to the amount of geometrical detail but to all elements that can contribute to or enhance reliability; and the z axis represents the level of interactivity, defined in this context as;
+This model classifies visualization strategies according to four continua, represented by the three physical dimensions of the cube and the degree of shading of each point within the cube. The x axis represents the level of automatism, which refers to the span of the development cycle required to produce the visualization; the y axis represents the level of precision, referring not only to the amount of geometrical detail but to all elements that can contribute to or enhance reliability; and the z axis represents the level of interactivity, defined in this context as:
 
 \begin{quote}
 	\textit{``its capacity to contextually offer the possibility to subjectively experience an interactive behaviour in a synchronous way, thus enabling the user the opportunity to meaningfully contribute to a given experience or to affect in real time the visualized  item''}~\cite{Foni2010}.
@@ -72,7 +72,7 @@ Although many applications of augmented reality to cultural heritage sites are m
 
 VR has been used in virtual heritage not only where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also to allow for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE that completely blocks stimuli from the user's real world surroundings~\cite{cabral:x3dexperience,Christou2006}, which can be situated at the site itself and create of a `space of illusion'~\cite{Tzortzaki2002}, allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
 
-Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to amateur observers in museums and visitor centres, performance is often considered more important than historical accuracy, a trait that mirrors a common theme in the computer gaming industry where \textit{``compelling action can reduce the need for full-scale visualization''}~\cite{Heim2014}.
+Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to the general public in museums and visitor centres, performance is often considered more important than historical accuracy, a trait that mirrors a common theme in the computer gaming industry where \textit{``compelling action can reduce the need for full-scale visualization''}~\cite{Heim2014}.
 
 %=========================================================================================================
 
@@ -173,7 +173,7 @@ Applying the concept of parallel reality to virtual heritage, possibly via a sit
 
 %=========================================================================================================
 
-Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available particularly in terms of positional data represents a restriction upon the style of interaction possible with a parallel reality system, a point recognised by Liest\o l et al. during their sitsim experiments~\cite{Liestøl2012}. Considering a scale of increasing accuracy, three use cases for parallel reality within cultural heritage scenarios can be pictured, with each representing increased interactivity in the terms of figure \ref{taxonomy_1.png};
+Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available particularly in terms of positional data represents a restriction upon the style of interaction possible with a parallel reality system, a point recognised by Liest\o l et al. during their sitsim experiments~\cite{Liestøl2012}. Considering a scale of increasing accuracy, three use cases for parallel reality within cultural heritage scenarios can be pictured, with each representing increased interactivity in the terms of figure \ref{taxonomy_1.png}:
 
 \begin{enumerate}
 	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance, similar to the static AR experiences mentioned in section \ref{existing-virtual-heritage-applications}. The minimum distance between any pair of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
@@ -328,7 +328,7 @@ Further requirements for obtaining accurate compass bearings from a MEMS magneto
 
 %=====================
 
-As mentioned in section \ref{SecondLifeMobility} the Second Life client can be controlled only via mouse, keyboard and joystick. Using the HMC6343's compass bearing and yaw values therefore requires one of two approaches;
+As mentioned in section \ref{SecondLifeMobility} the Second Life client can be controlled only via mouse, keyboard and joystick. Using the HMC6343's compass bearing and yaw values therefore requires one of two approaches:
 
 \begin{enumerate}
 	\item Encapsulating the compass bearing and yaw values into mouse, keyboard and/or joystick commands.
@@ -363,35 +363,35 @@ In order to control the position of the Second Life avatar, sensor data are requ
 
 %***diagram showing this
 
-In order for readings from a GPS receiver to be used to control the position of the Second Life avatar within a reconstruction, a translation must be performed between the coordinate system of GPS (latitude and longitude) and the coordinate system of Second Life (simple X,Y coordinates within 256 metre square `regions'). This is achieved by use of a single `anchor point' for which both the real world latitude and longitude and the corresponding virtual world X,Y coordinates are known. Calculating displacement within Second Life from these X,Y coordinates is achieved by applying the scale of the reconstruction to the displacement between the anchor point's latitude and longitude and the user's current position reported as latitude and longitude by a GPS receiver. This real world displacement is calculated using the haversine formula~\cite{VanBrummelen2012}, which is used to calculate the `great circle' (orthodromic) distance between two points on the surface of a sphere (such as the Earth, when simplified from its oblate spheroid shape). The central angle \text{$\left(\frac{d}{r}\right)$} between the two points is given by;
+In order for readings from a GPS receiver to be used to control the position of the Second Life avatar within a reconstruction, a translation must be performed between the coordinate system of GPS (latitude and longitude) and the coordinate system of Second Life (simple X,Y coordinates within 256 metre square `regions'). This is achieved by use of a single `anchor point' for which both the real world latitude and longitude and the corresponding virtual world X,Y coordinates are known. Calculating displacement within Second Life from these X,Y coordinates is achieved by applying the scale of the reconstruction to the displacement between the anchor point's latitude and longitude and the user's current position reported as latitude and longitude by a GPS receiver. This real world displacement is calculated using the haversine formula~\cite{VanBrummelen2012}, which is used to calculate the `great circle' (orthodromic) distance between two points on the surface of a sphere (such as the Earth, when simplified from its oblate spheroid shape). The central angle \text{$\left(\frac{d}{r}\right)$} between the two points is given by:
 
 \begin{equation}
 \label{haversine1}
 \text{haversin}\left(\frac{d}{r}\right) = \text{haversin}(\phi_{2}-\phi_{1})+\cos(\phi_{1})\cos(\phi_{2})\text{haversin}(\lambda_{2}-\lambda_{1})
 \end{equation}
 
-where;
+where:
 
 \begin{itemize}
-	\item \text{haversin} is the haversine function
+	\item \text{haversin} is the haversine function:
 		\begin{equation}
 		\label{harsine2}
 			\text{haversin}(\theta) = \sin^{2}\left( \frac{\theta}{2}\right) = \frac{1-\cos(\theta)}{2}
 		\end{equation}
-	\item $d$ is the distance between the two points along a great circle of the sphere,
-	\item $r$ is the radius of the sphere,
-	\item \text{$\phi_{1},\phi_{2}$} are the latitudes of point 1 and point 2,
+	\item $d$ is the distance between the two points along a great circle of the sphere.
+	\item $r$ is the radius of the sphere.
+	\item \text{$\phi_{1},\phi_{2}$} are the latitudes of point 1 and point 2.
 	\item \text{$\lambda_{1},\lambda_{2}$} are the longitudes of point 1 and point 2.
 \end{itemize}
 
-The equation can be solved for the distance $d$ by applying the inverse haversine function or through application of arcsine;
+The equation can be solved for the distance $d$ by applying the inverse haversine function or through application of arcsine:
 
 \begin{equation}
 	\label{haversine3}
 	d = r\;\text{haversin}^{-1}\left( h \right) = 2r \arcsin \left( \sqrt{h} \right)
 \end{equation}
 
-where $h$ is $\text{haversin}\left( \frac{d}{r} \right)$;
+where $h$ is $\text{haversin}\left( \frac{d}{r} \right)$:
 
 \begin{align}
 d & = 2r \arcsin\left( \sqrt{\text{haversin} \left( \phi_{2} - \phi_{1} \right) + \cos \left( \phi_{1} \right) \cos  \left( \phi_{2} \right) \text{haversin} \left( \lambda_{2} - \lambda_{1} \right) } \right) \nonumber \\ 
@@ -409,13 +409,13 @@ Figure \ref{haversine_example.png} illustrates this arrangement. In the real wor
   \label{haversine_example.png}
 \end{figure}
 
-The difference in longitude between the anchor point and the user's position, $\Delta\lambda$, is given by;
+The difference in longitude between the anchor point and the user's position, $\Delta\lambda$, is given by:
 
 \begin{equation}
 2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\lambda_{2} - \lambda_{1}}{2} \right) } \right)
 \end{equation}
 
-While the difference in latitude between the anchor point and the user's position, $\Delta\phi$, is given by;
+While the difference in latitude between the anchor point and the user's position, $\Delta\phi$, is given by:
 
 \begin{equation}
 2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\phi_{2} - \phi_{1}}{2}\right)} \right)
@@ -519,7 +519,7 @@ Figure \ref{arduino_hmc6343_u-blox_MAX-6.jpg} shows the assembled unit, comprisi
        
 %=========================================================================================================
 
-The MAX-6 was configured as follows;
+The MAX-6 was configured as follows:
 
 \begin{enumerate}
 	\item Dynamic Platform Model set to Pedestrian.
@@ -620,7 +620,7 @@ private Vector3 LatitudeLongitudeToRegionCoordinate(double newLat, double newLon
 
 \section{Modifying Second Life for Orientation and Position Control}
 
-Due to the Second Life client's existing control interfaces not allowing enough control over camera orientation for VTW's requirements (section \ref{exploitJoystick}), it was necessary to modify the client's codebase to produce a bespoke client allowing complete control over orientation by magnetometer and accelerometer input. Although sufficient position control was obtained via an OpenSim region module (section \ref{regionModule}) it was prudent to also encapsulate position control through the modified client; not only does this allow for finer grain control, it also removes the dependency upon the virtual reconstruction being hosted upon an OpenSim server (Second Life's own servers do not support extension via Region Modules). Thus the Second Life client was modified with the addition of the ability to;
+Due to the Second Life client's existing control interfaces not allowing enough control over camera orientation for VTW's requirements (section \ref{exploitJoystick}), it was necessary to modify the client's codebase to produce a bespoke client allowing complete control over orientation by magnetometer and accelerometer input. Although sufficient position control was obtained via an OpenSim region module (section \ref{regionModule}) it was prudent to also encapsulate position control through the modified client; not only does this allow for finer grain control, it also removes the dependency upon the virtual reconstruction being hosted upon an OpenSim server (Second Life's own servers do not support extension via Region Modules). Thus the Second Life client was modified with the addition of the ability to:
 
 \begin{itemize}
 	\item Connect to a serial device for input/output.
@@ -971,7 +971,7 @@ Considering the third scenario with detailed comparison of objects and artefacts
 
 \subsection{Real World Experience of VTW}
 \label{real-world-experience-of-vtw}
-Revisiting the definition of parallel reality, one can consider it to be distinguished by two principal features;
+Revisiting the definition of parallel reality, one can consider it to be distinguished by two principal features:
 
 \begin{enumerate}
 	\item The environmental aspect - are there two complete environments, one real and the other virtual?
