--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -39,7 +39,7 @@ Participants were sourced by adverts disseminated via an internal university mem
 
 Previously when immersive VR has been employed in virtual heritage scenarios it has predominantly been implemented as CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre are presented the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of a location, its contents and actors. Some of these CAVE installations have featured physical control interfaces such as joystick and 3D mouse~\cite{cabral:x3dexperience} and haptic interfaces~\cite{Christou2006}, while others have tracked user movement, whether head only or full body  gestures (such as the OVW group's VTTP platform shown in figure \ref{VTTP_projection.png}). In common among these CAVE experiences is that the VR content they present is experienced with a disconnect to the RW site to which it pertains, as the CAVE itself completely immerses users in VR visuals and does not permit them to see any of their RW surroundings, comparable to the experience of wearing a VR HMD without video see-through functionality. Furthermore the physical size of a CAVE limits the amount in any particular direction that a user can physically move, `prisoned' in Tzortzaki's language~\cite{Tzortzaki2002}, even if movement is encouraged due to its use as a control methodology. This presents a hindrance to the on-site comparison of real and virtual content, as it introduces both temporal and spatial separation between a user's experiences of the VR content and the corresponding RW objects and environment.
 
-With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effected by Oculus, their use at cultural heritage sites for achieving similar experiences to previous CAVE installations is becoming more plausible and brings with it certain benefits such as a reduction in the physical space required at the site for the installation. The OVW group's experience with presenting both experts and interested amateurs with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. These interactions have taken place in scenarios similar to those of existing cultural heritage CAVE scenarios; the user remains physically stationary and uses a controller or gestures to move their virtual presence throughout the VR environment, whilst unable to observe the RW environment due to the nature of the HMD isolating them from RW visual stimuli.
+With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effected by Oculus, their use at cultural heritage sites for achieving similar experiences to previous CAVE installations is becoming more plausible and brings with it certain benefits such as a reduction in the physical space required at the site for the installation. The OVW group's experience with presenting both experts and the general public with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. These interactions have taken place in scenarios similar to those of existing cultural heritage CAVE scenarios; the user remains physically stationary and uses a controller or gestures to move their virtual presence throughout the VR environment, whilst unable to observe the RW environment due to the nature of the HMD isolating them from RW visual stimuli.
 
 In this first stage of the evaluation a comparison was made between this seated style of interaction with VR content at a cultural heritage site wherein VR is experienced in isolation from RW, with both temporal and spatial separation, and a parallel reality style of interaction afforded by the Mirrorshades parallel reality platform, in which VR is experienced in tandem with RW by allowing the user to move around the RW environment and transition at any time into seeing the VR environment from the equivalent vantage point. Participants in this stage of the evaluation thus completed two scenarios wherein they interacted with the RW St Salvator's chapel and its corresponding VR reconstruction:
 
@@ -165,9 +165,25 @@ The parallel reality scenario scored slightly lower on SUS than the seated VR sc
 
 One participant did not complete the Likert-type questionnaires. Coincidentally this participant was also the only one to have reported previous experience with a HMD in the pre-task questionnaire, so the Likert-type questionnaire responses wholly represent participants with no prior HMD experience. With the resurgence of interest in HMD based VR in recent years the number of developers and enthusiasts with HMD experience is climbing. However until the first commercial VR HMDs are released and begin to permeate gaming and media consumption audiences the situation captured by these questionnaire results, where all visitors to a cultural heritage site had no previous HMD experience, should be considered representative of the general public.
 
-When considering the responses to the Likert-type questionnaire (see figure \ref{post_task_questionnaire_boxplot.png}) participants indicated that they generally found the parallel reality scenario to be more enjoyable and more rewarding than the seated VR scenario, with the former allowing them to more easily perform comparisons between features of the past and present. Participants felt that they better understood what the chapel was like in the past after the parallel reality scenario compared to the seated VR scenario, however both scenarios scored equally low for participants thinking that they did not notice differences between RW and VR. The parallel reality scenario led to a greater awareness of both environments, a greater sense of `being there', and a greater sense of `being in the past' than the seated VR scenario.
+The responses to the questionnaire are presented by figure \ref{post_task_questionnaire_boxplot.png} with the questions reproduced below. All questions were answered on a scale from 1 to 5, anchored between `strongly disagree' and `strongly agree' respectively:
+\begin{enumerate}
+	\item I found the exploration an enjoyable experience.
+	\item It was easy to compare features from the past and the present.
+	\item I felt motion sickness/dizziness.
+	\item In the virtual environment, I had a sense of being there.
+	\item I was aware of both real and virtual environments.
+	\item It was rewarding to explore the chapel in this way.
+	\item I felt as though I was in the past.
+	\item I think I would have preferred a conventional computer monitor.
+	\item This experienced changed my understanding of the chapel.
+	\item I did not notice differences between the real and virtual environments.
+	\item The visual quality of the headset was bad.
+	\item I feel I now better understand what the chapel was like in the past.
+\end{enumerate}
 
-The visual quality of the headset was perceived as being worse in the parallel reality scenario. Whilst the visual quality of the VR visuals was identical in both scenarios, this result is presumably because during the parallel reality scenario the participants were viewing the RW environment upon the DK1's screen via the cameras, with much lower visual acuity than in the seated VR scenario where they observed the RW environment unmediated when subsequently walking through the chapel without the DK1.
+Participants indicated that they generally found the parallel reality scenario to be more enjoyable (q1) and more rewarding (q6) than the seated VR scenario, with the former allowing them to more easily perform comparisons between features of the past and present (q2). Participants felt that they better understood what the chapel was like in the past after the parallel reality scenario compared to the seated VR scenario (q9/q12), however both scenarios scored equally low for participants thinking that they did not notice differences between RW and VR (q10). The parallel reality scenario led to a greater awareness of both environments (q5) and a greater sense of `being in the past' (q7) than the seated VR scenario.
+
+The visual quality of the headset was perceived as being worse in the parallel reality scenario (q11). Whilst the visual quality of the VR visuals was identical in both scenarios, this result is presumably because during the parallel reality scenario the participants were viewing the RW environment upon the DK1's screen via the cameras, with much lower visual acuity than in the seated VR scenario where they observed the RW environment unmediated when subsequently walking through the chapel without the DK1.
 
 It is worth noting that although the parallel reality scenario scored lower than the seated VR scenario in SUS, both scenarios scored similarly high in question 2 (\textit{``It was easy to compare features from the past and the present''}) and similarly low in question 8 (\textit{``I would have preferred a conventional computer monitor''}) of the Likert-type questionnaire.
 
@@ -179,7 +195,7 @@ Studying the structured interviews that were conducted after participants had co
 
 All participants said that the parallel reality scenario was more engaging than the seated VR scenario, even though 2x participants said that they preferred the seated VR scenario overall. Of these 2x,  one did not find it comfortable to walk while wearing the DK1 and the other reported gaining a better understanding of the past from the seated VR scenario. The participant who found it uncomfortable to walk while wearing the DK1 was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches and was not changed to account for different participant heights as this would have required lengthy recalibration for each and every participant. For a participant of average height the discrepancy between their RW viewpoint and their VR viewpoint was minimal, however for a particularly short or particularly tall participant this discrepancy would have been much greater and may have contributed to the discomfort of walking with the DK1 as each transition between RW and VR would have resulted in a perceptible shift in height of the viewpoint.
 
-Those that said that they preferred the parallel reality scenario alluded to the immediacy of comparison between RW and VR as a contributing factor to this preference. Twice as many participants reported that the parallel reality scenario made it easier to spot differences between RW and VR than the seated VR scenario, with 4 out of 6 participants reporting that they noticed differences in the parallel reality scenario that they did not notice in the seated VR scenario. In particular, several participants mentioned the different position of the rood screen and one participant who didn't notice this difference during the seated VR scenario commented that the parallel reality scenario made it \textit{``blatantly obvious''}. Another participant was able to list multiple differences that s/he had spotted in the parallel reality scenario that they had not noticed in the seated VR scenario. One participant directly mentioned that the immediacy of comparison between RW and VR in the parallele reality scenario was what allowed them to spot more differences, another mentioned that with the seated VR scenario it was not clear that you were \textit{``trying to look into the past''} but in the parallel reality scenario it was obvious because \textit{``you can see the differences''}, while another said that s/he preferred the parallel reality scenario because \textit{``it was easier to compare and contrast between the real world and the virtual one''}.
+Those that said that they preferred the parallel reality scenario alluded to the immediacy of comparison between RW and VR as a contributing factor to this preference. Twice as many participants reported that the parallel reality scenario made it easier to spot differences between RW and VR than the seated VR scenario, with 4 out of 6 participants reporting that they noticed differences in the parallel reality scenario that they did not notice in the seated VR scenario. In particular, several participants mentioned the different position of the rood screen and one participant who didn't notice this difference during the seated VR scenario commented that the parallel reality scenario made it \textit{``blatantly obvious''}. Another participant was able to list multiple differences that s/he had spotted in the parallel reality scenario that they had not noticed in the seated VR scenario. One participant directly mentioned that the immediacy of comparison between RW and VR in the parallel reality scenario was what allowed them to spot more differences, another mentioned that with the seated VR scenario it was not clear that you were \textit{``trying to look into the past''} but in the parallel reality scenario it was obvious because \textit{``you can see the differences''}, while another said that s/he preferred the parallel reality scenario because \textit{``it was easier to compare and contrast between the real world and the virtual one''}.
 
 The quality of the cameras was mentioned negatively by one participant who answered that the seated VR scenario made it easier to spot differences between RW and VR, with another participant specifically mentioning that a higher \textit{``resolution''} was needed.
 
@@ -485,7 +501,7 @@ Log data show participants displaying restricted head movement throughout the pa
 
 %\clearpage
 
-\chapter{Informed Parallel Reality}
+\chapter{Evaluation: Informed Parallel Reality}
 
 %\section{Stage 2 - Informing Parallel Reality Implementation}
 
@@ -548,7 +564,7 @@ However considering a parallel reality scenario within the same framework, senso
 
 \end{enumerate}
 
-Each of these three levels is associated with one of Damasio's evolutionary levels of selfhood~\cite{Damasio1999} and the Waterworths' reasoning leads to the position that;
+Each of these three levels is associated with one of Damasio's evolutionary levels of selfhood~\cite{Damasio1999} and the Waterworths' reasoning leads to the position that:
 
 \begin{quote}
 \textit{``Presence is maximised when all three layers are integrated around the same external situation, whether this is physical reality, virtual reality, or a mixture of the two.''}~\cite{Mantovani2010}
@@ -593,7 +609,7 @@ The stage 2.1 investigation was conducted using a similar approach as that emplo
 
 \begin{enumerate}
 	\item \textbf{Seated VR scenario} - Participants explored the VR chapel from a seated position, as VR has already come to be employed at cultural heritage sites via CAVE installations and by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring theier view of the RW chapel around them.
-	\item \textbf{Parallel reality scenario with transitions 1-3} - Participants experienced the RW and VR chapels in tandem using the Mirrorshades platform. They wore the DK1, held the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen was 100\% RW and they were granted access to 3x different transition styles;
+	\item \textbf{Parallel reality scenario with transitions 1-3} - Participants experienced the RW and VR chapels in tandem using the Mirrorshades platform. They wore the DK1, held the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen was 100\% RW and they were granted access to 3x different transition styles:
 	\begin{enumerate}
 		\item Hard switch (section \ref{sub-hardswitch}) mapped to controller \texttt{[A]} button (transition 1).
 		\item Transition with linear interpolation (section \ref{transition-with-linear-interpolation}) mapped to controller \texttt{[B]} button (transition 2).
@@ -633,8 +649,23 @@ A total of 7 participants completed the stage 2.1 evaluation:
 %=========================================================================================================
 
 \subsection{Likert-type Questionnaires}
+The responses to the questionnaires are presented by figure \ref{2-1-12-item-likert-type-questionnaire-boxplot.png} with the questions reproduced below. All questions were answered on a scale from 1 to 5, anchored between `strongly disagree' and `strongly agree' respectively:
+\begin{enumerate}
+	\item I found the exploration an enjoyable experience.
+	\item I preferred one transition more than the others.
+	\item I was aware of both real and virtual environments.
+	\item It was easy to compare features from the past and the present.
+	\item I preferred different transitions in different situations.
+	\item It felt as though I was in the past.
+	\item I felt motion sickness/dizziness.
+	\item It was rewarding to explore the chapel in this way.
+	\item I forgot that there were different transitions available.
+	\item I feel I now better understand what the chapel was like in the past.
+	\item Switching between real and virtual was uncomfortable.
+	\item I did not notice differences between the real and virtual environments.
+\end{enumerate}
 
-The responses to the Likert-type questionnaires (see figure \ref{2-1-12-item-likert-type-questionnaire-boxplot.png}) for the two parallel reality scenarios of the stage 2.1 evaluation indicate that participants overall found scenario 1-3 to be more enjoyable than scenario 1-4, although scenario 1-4 made them more aware of both environments than scenario 1-3 and allowed them to compare features from past and present more easily, with participants not noticing differences slightly more in scenario 1-3 than in scenario 1-4. Participants reported preferring one transition over others in certain situations more in scenario 1-4 than scenario 1-3 and also indicated that switching in scenario 1-4 was more uncomfortable than in scenario 1-3.
+These responses indicate that participants overall found scenario 1-3 to be more enjoyable than scenario 1-4 (q1), although scenario 1-4 made them more aware of both environments than scenario 1-3 (q3) and allowed them to compare features from past and present more easily (q4), with participants not noticing differences slightly more in scenario 1-3 than in scenario 1-4 (q12). Participants reported preferring one transition over others in certain situations more in scenario 1-4 than scenario 1-3 (q5) and also indicated that switching in scenario 1-4 was more uncomfortable than in scenario 1-3 (q11).
 
 %=========================================================================================================
 
@@ -1177,6 +1208,19 @@ As the controlled variable between the two parallel reality scenarios was based 
 
 \subsection{Likert-type Questionnaires}
 
+The responses to the questionnaires are presented by figure \ref{9-item-likert-type-questionnaire.png} with the questions reproduced below. All questions were answered on a scale from 1 to 5, anchored between `strongly disagree' and `strongly agree' respectively:
+\begin{enumerate}
+	\item I found the exploration an enjoyable experience.
+	\item I was aware of both real and virtual environments.
+	\item It was easy to compare features from the past and the present.
+	\item It felt as though I was in the past.
+	\item I felt motion sickness/dizziness.
+	\item It was rewarding to explore the chapel in this way.
+	\item I feel I now better understand what the chapel was like in the past.
+	\item Switching between real and virtual was uncomfortable.
+	\item I did not notice differences between the real and virtual environments.
+\end{enumerate}
+
 \begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=.6\textwidth]{2.2/9-item-likert-type-questionnaire.png}
@@ -1185,7 +1229,7 @@ As the controlled variable between the two parallel reality scenarios was based 
 	\end{center}
 \end{figure}
 
-The responses to the Likert-type questionnaires (see figure \ref{9-item-likert-type-questionnaire.png}) for the two parallel reality scenarios of the stage 2.2 evaluation indicate tgat overall preference was mixed between the two scenarios. Although the 50/50 scenario came out on top for comparison of features between past and present, had less reported motion sickness and participants thought that they didn't notice differences between real and virtual more in the 75/25 scenario, the 50/50 scenario was reported as being a less rewarding way of exploring the chapel overall.
+These responses indicate that overall preference was mixed between the two scenarios. Although the 50/50 scenario came out on top for comparison of features between past and present (q3), had less reported motion sickness (q5) and participants thought that they didn't notice differences between real and virtual more in the 75/25 scenario (q9), the 50/50 scenario was reported as being a less rewarding way of exploring the chapel overall (q6).
 
 %=========================================================================================================
 
@@ -1489,7 +1533,7 @@ With the merit of the platform compared to a seated VR experience established by
 
 Stage 2.2 further investigated this concept of presentation of VR visual stimuli to the user without their conscious invocation of a transition, with the intention being to raise awareness and understanding between the environments and to cause them to see things that they might otherwise have missed but without introducing such the negativity associated with the automatic transition, by replacing the 100\% RW default view of earlier stages with ones that presented a percentage of each environment at all times. The more extreme case of a 50/50 split led to the greater increase in spatial presence within the VR environment and a barely perceptible decrease in experienced realism of the VR environment when presented at all times alongside the RW environment, however the 75/25 split that led to less remarkable changes in IPQ results was preferred by the participants in their interview responses.
 
-Together, these investigations explored the two fundamental aspects of transitions between the constituent RW and VR environments of a parallel reality system that were identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct bearing on the severity of the break in presence experienced when doing so. Considering the findings of these investigations, several best practices for future parallel reality implementations are proposed;
+Together, these investigations explored the two fundamental aspects of transitions between the constituent RW and VR environments of a parallel reality system that were identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct bearing on the severity of the break in presence experienced when doing so. Considering the findings of these investigations, several best practices for future parallel reality implementations are proposed:
 
 \begin{enumerate}
 	\item Both a 100\% RW and a 100\% VR view should be provided, though these do not have to be the default RW and VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing the same observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs and associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a video see-through HMD based parallel reality system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most comfortable.
