--- a/thesis.tex
+++ b/thesis.tex
@@ -228,7 +228,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 %\chapter{Mirrorshades - Evaluation}
-\chapter{The Merit of Parallel Reality}
+\chapter{Evaluation: Merit of Parallel Reality}
 \graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{06_mirrorshades_studies_results/mirrorshades_studies_results.tex}
 
